--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,185 @@
-timm==0.6.7
-deepspeed==0.9.2
-data
+aiohttp
+aiofiles==22.1.0
+pydub
+packaging==23.2
+flash-attn==2.3.2
+accelerate==0.21.0
+aiosignal==1.3.1
+altair==5.1.2
+anyio==3.7.1
+appdirs==1.4.4
+apptools==5.2.1
+asttokens==2.4.0
+async-timeout==4.0.3
+attrs==23.1.0
+av==10.0.0
+backcall==0.2.0
+bitsandbytes==0.41.0
+bleach==6.1.0
+bokeh==2.4.3
+certifi==2023.7.22
+charset-normalizer==3.3.2
+click==8.1.7
+cmake==3.25.0
+configobj==5.0.8
+contourpy==1.1.1
+data==0.4
+decorator==5.1.1
+deepspeed==0.9.5
+diffusers==0.20.2
+dill==0.3.7
+docker-pycreds==0.4.0
 einops==0.6.1
+einops-exts==0.0.4
+envisage==7.0.3
+eva-decord==0.6.1
+exceptiongroup==1.1.3
+executing==2.0.0
+fastapi==0.104.1
+ffmpy==0.3.1
+filelock==3.12.4
+flash-attn==2.3.2
+fonttools==4.43.1
+frozenlist==1.4.0
+fsspec==2023.6.0
 ftfy==6.1.1
+funcsigs==1.0.2
+fvcore==0.1.5.post20221221
+geoviews==1.8.1
+gitdb==4.0.11
+GitPython==3.1.40
+gradio==3.35.2
+gradio_client==0.2.9
+h11==0.14.0
+hjson==3.1.0
+holoviews==1.13.0
+httpcore
+httpx==0.24.0
+huggingface-hub==0.17.3
+idna==3.4
+imageio==2.31.5
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
 iopath==0.1.10
 ipdb==0.13.13
-numpy==1.24.3
-peft==0.3.0
-Pillow==9.5.0
-PyYAML==6.0
-regex==2022.10.31
-torchvision==0.14.1
-torchaudio==0.13.1
-pytorchvideo
-fvcore
-decord==0.6.0
+ipython==8.12.3
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+latex2mathml==3.76.0
+linkify-it-py==2.0.2
+lit==15.0.7
+-e git+https://github.com/haotian-liu/LLaVA.git@f16049a3d35e281a4d88b7a2cb0a7f36a0c677ef#egg=llava
+Markdown==3.5
+markdown-it-py==2.2.0
+markdown2==2.4.10
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.3.3
+mdtex2html==1.2.0
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.4
+multiprocess==0.70.15
+networkx==3.1
+ninja==1.11.1.1
+nltk==3.8.1
+openai==0.28.1
+orjson==3.9.10
+packaging==23.2
+pandas==2.0.3
+panel==0.14.4
+param==1.13.0
+parameterized==0.9.0
+parso==0.8.3
+pathtools==0.1.2
+peft==0.4.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.1
+pkgutil_resolve_name==1.3.10
+portalocker==2.8.2
+prompt-toolkit==3.0.39
+protobuf==4.24.4
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+pyasn1==0.5.0
+pyct==0.5.0
+pydantic==1.10.13
+pydub==0.25.1
+pyface==8.0.0
+Pygments==2.16.1
+PyQt5==5.15.9
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.12.2
+PySide2==5.15.2.1
+python-multipart==0.0.6
+pytorchvideo==0.1.5
+pytz==2023.3.post1
+pyviz_comms==3.0.0
+PyWavelets==1.4.1
+PyYAML==6.0.1
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+rich==13.6.0
+rpds-py==0.10.4
+rsa==4.9
+safetensors==0.4.0
+scikit-learn==1.2.2
+scipy==1.10.1
+semantic-version==2.10.0
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+sentry-sdk==1.32.0
+setproctitle==1.3.3
+shiboken2==5.15.2.1
+shortuuid==1.0.11
+smmap==5.0.1
+sniffio==1.3.0
+stack-data==0.6.3
+starlette==0.27.0
+svgwrite==1.4.3
+sympy==1.12
+tabulate==0.9.0
+tensorboardX==2.6.2.2
+termcolor==2.3.0
+threadpoolctl==3.2.0
+timm==0.6.13
+tokenizers
+tomli==2.0.1
+toolz==0.12.0
+torch==2.0.1+cu117
+torchaudio==2.0.2+cu117
+torchvision==0.15.2+cu117
 tqdm==4.64.1
-transformers==4.29.1
+traitlets==5.11.2
+traits==6.4.3
+traitsui==8.0.0
+triton==2.0.0
+types-regex==2023.10.3.0
+typing_extensions==4.8.0
+tzdata==2023.3
+uc-micro-py==1.0.2
+urllib3==2.0.7
+uvicorn==0.23.2
+vtk==9.0.1
+wandb==0.15.12
+wavedrom==2.0.3.post3
+wcwidth==0.2.8
+webencodings==0.5.1
+websockets==11.0.3
+Werkzeug==3.0.0
+xxhash==3.4.1
+yacs==0.1.8
+yarl==1.9.2
+zipp==3.17.0
+
+
+
+
+
